--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="header">
-
+    <div class="header display-flex">
+        <div class="navbar">
+            <div class="logo"><img src="assets/logo.png" alt=""></div>
+        </div>
+        <div class="nav">
+            <ul class="nav-item display-flex inter-font-2">
+              <div class="hidden-items display-flex">
+                  <li><a class="dark-4" id="home" href="">Home</a></li>
+                <li><a class="dark-5" href="">Shop</a></li>
+                <li><a class="dark-5" href="">About us</a></li>
+              </div>
+                <li><a class="dark-1" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($256)</a></li>
+            </ul>
+        </div>
     </div>
     <div class="main">
+        <div class="banner display-flex">
+            <div class="banner-left">
+                <h1 class="banner-title noto-serif-font-1">
+                    ALWAYS <span class="primary-color">FRESH FLOWERS</span>
+                </h1>
+                <p class="banner-description dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="banner-right">
+                <img src="assets/hero-flower.png" alt="">
+            </div>
+        </div>
 
     </div>
     <div class="footer">
