added our-plant section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="header display-flex">
         <div class="navbar">
@@ -14,26 +18,88 @@
         </div>
         <div class="nav">
             <ul class="nav-item display-flex inter-font-2">
-              <div class="hidden-items display-flex">
-                  <li><a class="dark-4" id="home" href="">Home</a></li>
-                <li><a class="dark-5" href="">Shop</a></li>
-                <li><a class="dark-5" href="">About us</a></li>
-              </div>
+                <div class="hidden-items display-flex">
+                    <li><a class="dark-4" id="home" href="">Home</a></li>
+                    <li><a class="dark-5" href="">Shop</a></li>
+                    <li><a class="dark-5" href="">About us</a></li>
+                </div>
                 <li><a class="dark-1" href=""><i class="fa-solid fa-cart-shopping"></i>Cart ($256)</a></li>
             </ul>
         </div>
     </div>
     <div class="main">
+        <!-- Banner section -->
         <div class="banner display-flex">
             <div class="banner-left">
                 <h1 class="banner-title noto-serif-font-1">
                     ALWAYS <span class="primary-color">FRESH FLOWERS</span>
                 </h1>
-                <p class="banner-description dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <p class="banner-description dark-3">Indulge your senses with the beauty and fragrance of our fresh
+                    flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
+                    perfect for any occasion. </p>
             </div>
             <div class="banner-right">
                 <img src="assets/hero-flower.png" alt="">
             </div>
+        </div>
+        <!-- Our Plant section -->
+        <div class="our-plant">
+            <h2 class="our-plant-title"><span class="primary-color">Our</span> Plants</h2>
+            <p class="our-plant-description dark-3">Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="card-title">Lily Blossom</h2>
+                    <h2 class="card-price">20 USD</h2>
+                    <button class="add-to-cart-btn">Add to Cart</button>
+                </div>
+            </div>
+
+
         </div>
 
     </div>
@@ -41,4 +107,5 @@
 
     </div>
 </body>
+
 </html>
