added flower and plant lover section without trusted badge

--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
 
 
         </div>
+        <!-- flower-lover-section -->
+         <div class="flower-lover display-flex">
+            <div class="img">
+                <img src="assets/flower-store.png" alt="">
+            </div>
+            <div class="flower-lover-content">
+                <h1 class="flower-lover-title">Flower & Plants Lover</h1>
+                <ul>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+         </div>
 
     </div>
     <div class="footer">
