added join section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
             </div>
          </div>
 
+         <!-- Join section -->
+          <div class="join">
+            
+                <h1 class="join-title">Join the colorful Bunch</h1>
+            <div class="join-content">
+            <input type="e-mail" name="" id="email" placeholder="Write email">
+            <button class="subscribe-btn">Subscribe</button>
+            </div>
+          </div>
     </div>
     <div class="footer">
 
