added footer section and latest deal section

--- a/index.html
+++ b/index.html
@@ -102,32 +102,89 @@
 
         </div>
         <!-- flower-lover-section -->
-         <div class="flower-lover display-flex">
+        <div class="flower-lover display-flex">
             <div class="img">
                 <img src="assets/flower-store.png" alt="">
             </div>
             <div class="flower-lover-content">
                 <h1 class="flower-lover-title">Flower & Plants Lover</h1>
                 <ul>
-                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                        classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                        classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                        classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
             </div>
-         </div>
-
-         <!-- Join section -->
-          <div class="join">
-            
-                <h1 class="join-title">Join the colorful Bunch</h1>
-            <div class="join-content">
-            <input type="e-mail" name="" id="email" placeholder="Write email">
-            <button class="subscribe-btn">Subscribe</button>
+        </div>
+        <!-- latest deal section -->
+        <div class="latest-deal">
+            <div class="latest-deal-content">
+                <h1 class="latest-deal-title"><span class="primary-color">Latest</span> Deals</h1>
+                <p class="latest-deal-description dark-3">Indulge your senses with the beauty and fragrance of our fresh
+                    flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-          </div>
-    </div>
-    <div class="footer">
+            <div class="latest-deal-container">
+                <div class="deal-1">
+                    <div class="deal-content">
+                        <h2 class="deal-title">60% Off | Bloom Plant</h2>
+                        <h3 class="deal-sub-title">Shop Now</h3>
+                    </div>
+                </div>
+                <div class="deal-2">
+                    <div class="deal-content">
+                        <h2 class="deal-title">30% Off | Ana Plant</h2>
+                        <h3 class="deal-sub-title">Shop Now</h3>
+                    </div>
+                </div>
+                <div class="deal-3">
+                    <div class="deal-content" id="deal-3">
+                        <h2 class="deal-title">25% Off | Zabo Plant</h2>
+                        <h3 class="deal-sub-title">Shop Now</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <!-- Join section -->
+        <div class="join">
+
+            <h1 class="join-title">Join the colorful Bunch</h1>
+            <div class="join-content">
+                <input type="e-mail" name="" id="email" placeholder="Write email">
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+        </div>
+    </div>
+    <!-- footer section -->
+    <div class="footer">
+        <div class="box-1">
+            <img src="assets/logo.png" alt="">
+            <p class="footer-description dark-3">Indulge your senses with the beauty and fragrance of our fresh flower
+                shop.
+            </p>
+        </div>
+        <ul class="list-item-1">
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+        <ul class="list-item-2">
+            <li><a href="">Features</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms of Service</a></li>
+            <li><a href="">Help Center</a></li>
+        </ul>
+        <div class="footer-icon">
+            <img src="assets/icon-linkedin.png" alt="">
+            <img src="assets/icon-twitter.png" alt="">
+            <img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-youtube.png" alt="">
+        </div>
     </div>
 </body>
 
