--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
                         classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
+                <div class="badge">
+                    <img src="assets/trusted-badge.png" alt="">
+                </div>
             </div>
         </div>
         <!-- latest deal section -->
