added onclick function in add-to-cart-btn

--- a/index.html
+++ b/index.html
@@ -53,49 +53,49 @@
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="card-title">Lily Blossom</h2>
                     <h2 class="card-price">20 USD</h2>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <button onclick="cart()" class="add-to-cart-btn">Add to Cart</button>
                 </div>
             </div>
 
@@ -189,6 +189,11 @@
             <img src="assets/icon-youtube.png" alt="">
         </div>
     </div>
+    <script>
+        function cart(){
+            alert("Flower added to cart")
+        }
+    </script>
 </body>
 
 </html>
