added animation in trusted badge

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="inter-font-2">
     <div class="header display-flex">
         <div class="navbar">
             <div class="logo"><img src="assets/logo.png" alt=""></div>
@@ -44,7 +44,7 @@
         </div>
         <!-- Our Plant section -->
         <div class="our-plant">
-            <h2 class="our-plant-title"><span class="primary-color">Our</span> Plants</h2>
+            <h2 class="our-plant-title noto-serif-font-1"><span class="primary-color">Our</span> Plants</h2>
             <p class="our-plant-description dark-3">Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
@@ -107,7 +107,7 @@
                 <img src="assets/flower-store.png" alt="">
             </div>
             <div class="flower-lover-content">
-                <h1 class="flower-lover-title">Flower & Plants Lover</h1>
+                <h1 class="flower-lover-title noto-serif-font-1">Flower & Plants Lover</h1>
                 <ul>
                     <li class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
                         classic roses to exotic blooms, we offer a wide variety of fresh.</li>
@@ -124,26 +124,26 @@
         <!-- latest deal section -->
         <div class="latest-deal">
             <div class="latest-deal-content">
-                <h1 class="latest-deal-title"><span class="primary-color">Latest</span> Deals</h1>
+                <h1 class="latest-deal-title noto-serif-font-1"><span class="primary-color">Latest</span> Deals</h1>
                 <p class="latest-deal-description dark-3">Indulge your senses with the beauty and fragrance of our fresh
                     flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="latest-deal-container">
                 <div class="deal-1">
                     <div class="deal-content">
-                        <h2 class="deal-title">60% Off | Bloom Plant</h2>
+                        <h2 class="deal-title noto-serif-font-1">60% Off | Bloom Plant</h2>
                         <h3 class="deal-sub-title">Shop Now</h3>
                     </div>
                 </div>
                 <div class="deal-2">
                     <div class="deal-content">
-                        <h2 class="deal-title">30% Off | Ana Plant</h2>
+                        <h2 class="deal-title noto-serif-font-1">30% Off | Ana Plant</h2>
                         <h3 class="deal-sub-title">Shop Now</h3>
                     </div>
                 </div>
                 <div class="deal-3">
                     <div class="deal-content" id="deal-3">
-                        <h2 class="deal-title">25% Off | Zabo Plant</h2>
+                        <h2 class="deal-title noto-serif-font-1">25% Off | Zabo Plant</h2>
                         <h3 class="deal-sub-title">Shop Now</h3>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
         <!-- Join section -->
         <div class="join">
 
-            <h1 class="join-title">Join the colorful Bunch</h1>
+            <h1 class="join-title noto-serif-font-1">Join the colorful Bunch</h1>
             <div class="join-content">
                 <input type="e-mail" name="" id="email" placeholder="Write email">
                 <button class="subscribe-btn">Subscribe</button>
